Update layout containers for styling

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,6 @@
 @import 'bootstrap/dist/css/bootstrap';
 
-.navbar-brand {
-  font-size: 2rem;
-
-}
+// .navbar-brand {
+//   font-size: 2rem;
+//
+// }
