--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -4,10 +4,8 @@
   <h3>Search stocks</h3>
   <%= form_tag search_stock_path, remote: true, method: :get do %>
     <div class="form-group row">
-      <div class="col-sm-9 no-right-padding">
-        <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true,
-                          class: "form-control form-control-lg" %>
-      </div>
+      <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true,
+                        class: "form-control form-control-lg" %>
       <div class="col-sm-3 no-left-padding">
         <%= button_tag type: :submit, class: "btn btn-success" do %>
           <%= fa_icon 'search 2x' %>
@@ -15,4 +13,7 @@
     </div>
   <% end %>
 </div>
-<%= render 'users/result' %>
+
+<div id="results">
+
+</div>
