--- a/app/views/users/_result.js.erb
+++ b/app/views/users/_result.js.erb
@@ -1,1 +1,2 @@
-alert("Hello world")
+// document.querySelector('#results').innerHTML = '<%=  escape_javascript(render 'users/result.html') %>'
+document.querySelector('#results').innerHTML = '<%= j (render 'users/result.html') %>'
