--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -15,7 +15,7 @@
             <th scope="row"><%= stock.ticker %></th>
             <td><%= stock.name %></td>
             <td><%= stock.last_price %></td>
-            <td><%= link_to 'Remove', '#',
+            <td><%= link_to 'Remove', user_stock_path(stock),
                     method: :delete,
                     data: {confirm: "Are you sure?"},
                     class: "btn btn-sm btn-warning" %>
