--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,2 @@
-<h1>Welcome to Stock Tracker Social Media App</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-
-<%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+<h1>Welcome to the Finance Tracker app</h1>
+<p>Create a welcome page</p>
