--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -5,7 +5,7 @@
   <%= form_tag search_friend_path, remote: true, method: :get do %>
     <div class="form-group row">
       <div class="col-sm-9 no-right-padding">
-        <%= text_field_tag :friend, params[:friend], placeholder: "Enter friend's name", autofocus: true, class: "form-control form-control-lg" %>
+        <%= text_field_tag :friend, params[:friend], placeholder: "Name or e-mail", autofocus: true, class: "form-control form-control-lg" %>
       </div>
       <div class="col-sm-3 no-left-padding">
         <%= button_tag type: :submit, class: "btn btn-success" do %>
@@ -16,6 +16,9 @@
   <% end %>
 </div>
 
+<div id="friend-results">
+
+</div>
 <% if !@friends.empty? %>
   <%= render 'friends/list' %>
 <% end %>
