Show search result on Friends list page

--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -2,13 +2,13 @@
   <%= render 'layouts/messages' %>
 </div>
 
-<% if @friend %>
+<% if @friends %>
   <div class="card card-header results-block">
-    <strong>Email: </strong> <%= @friend %>
-    <strong>Name: </strong> <%= @friend %>
-    <strong>Price: </strong> <%= @friend %>
-    <%= link_to 'Follow', '#',
-                  class: "btn btn-sm btn-success",
-                  method: :post %>
+    <% @friends.each do |friend| %>
+      <strong>Name: </strong> <%= friend.full_name %>
+      <strong>Email: </strong> <%= friend.email %>
+      <strong>Profile: </strong> <%= link_to "View Profile", '#', class: "btn btn-sm btn-success"  %>
+      <%= link_to 'Follow', '#', class: "btn btn-sm btn-success", method: :post %>
+    <% end %>
   </div>
 <% end %>
