--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -10,8 +10,15 @@
           <tr>
             <td><strong>Name: </strong> <%= friend.full_name %></td>
             <td><strong>Email: </strong> <%= friend.email %></td>
-            <td><strong>Actions: </strong> <%= link_to "View Profile", '#', class: "btn btn-sm btn-success"  %>
-            <%= link_to 'Follow', '#', class: "btn btn-sm btn-success", method: :post %></td>
+            <td>
+              <strong>Actions: </strong>
+              <%= link_to "View Profile", '#', class: "btn btn-sm btn-success"  %>
+              <% if current_user.not_friends_with?(friend.id) %>
+                <%= link_to 'Follow', '#', class: "btn btn-sm btn-success", method: :post %>
+              <% else %>
+                <span class="badge badge-secondar">You are friends</span>
+              <% end %>
+            </td>
           </tr>
         <% end %>
       </tbody>
