--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -14,7 +14,7 @@
               <strong>Actions: </strong>
               <%= link_to "View Profile", '#', class: "btn btn-sm btn-success"  %>
               <% if current_user.not_friends_with?(friend.id) %>
-                <%= link_to 'Follow', '#', class: "btn btn-sm btn-success", method: :post %>
+                <%= link_to 'Follow', friendships_path(friend: friend), class: "btn btn-sm btn-success", method: :post %>
               <% else %>
                 <span class="badge badge-secondar">You are friends</span>
               <% end %>
