--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -12,7 +12,7 @@
             <td><strong>Email: </strong> <%= friend.email %></td>
             <td>
               <strong>Actions: </strong>
-              <%= link_to "View Profile", '#', class: "btn btn-sm btn-success"  %>
+              <%= link_to "View Profile", user_path(friend), class: "btn btn-sm btn-success"  %>
               <% if current_user.not_friends_with?(friend.id) %>
                 <%= link_to 'Follow', friendships_path(friend: friend), class: "btn btn-sm btn-success", method: :post %>
               <% else %>
