--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -16,12 +16,12 @@
               <% if current_user.not_friends_with?(friend.id) %>
                 <%= link_to 'Follow', friendships_path(friend: friend), class: "btn btn-sm btn-success", method: :post %>
               <% else %>
-                <span class="badge badge-secondar">You are friends</span>
+                <span class="badge badge-secondary">You are friends</span>
               <% end %>
             </td>
           </tr>
         <% end %>
       </tbody>
-      </table>
+    </table>
   </div>
 <% end %>
