--- a/app/views/friends/_list.html.erb
+++ b/app/views/friends/_list.html.erb
@@ -17,9 +17,10 @@
             <td><%= friend.last_name %></td>
             <td>
               <%= link_to 'View profile', user_path(friend),
-                                            class: 'btn btn-sm btn-success' %>
-              <%= link_to 'Stop following', friendship_path(friend), method: :delete, data: {confirm: 'Are you sure?'},
-                                            class: 'btn btn-sm btn-warning' %>
+                  class: 'btn btn-sm btn-success' %>
+              <%= link_to 'Stop following', friendship_path(friend),
+                  method: :delete, data: {confirm: 'Are you sure?'},
+                  class: 'btn btn-sm btn-warning' %>
             </td>
           </tr>
         <% end %>
