Change welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Welcome to the Finance Tracker app</h1>
-<p>Create a welcome page</p>
+<br>
+<p>Here you can find friends and build your own portfolio of stocks</p>
+
+<p>To look for stocks and add them to your portfolio go to  <%= link_to 'My portfolio', my_portfolio_path, class: "btn btn btn-outline-success" %></p>
+<p>To find friends and see their stocks portfolio go to <%= link_to 'Friends', my_friends_path, class: "btn btn btn-outline-success" %></p>
